# dockable-app

./: Cargo.toml  README.md  package.json  pnpm-lock.yaml
src/: App.tsx  main.rs
src-tauri/: Cargo.toml  input_log.csv  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: input_tracker.rs  main.rs
